src/objects/ACCL__Fund_Transaction_Template__c.object
<CustomObject>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c, 
&quot;Language1&quot;, ACCL__Description_Language_1__c, 
&quot;Language2&quot;, ACCL__Description_Language_2__c, 
&quot;Language3&quot;, ACCL__Description_Language_3__c,
&quot;Language4&quot;, ACCL__Description_Language_4__c, 
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <globalPicklist>ACCL__Sales_Org</globalPicklist>
        <label>Sales Org</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <label>Sort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Cross_Category_Transfer_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if the transaction template is for Cross category transfer</description>
        <label>Cross Category Transfer Allowed</label>
        <type>Checkbox</type>
    </fields>
    <label>Fund Transaction Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>UL_Cross_Category_Transfer_Allowed__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Transaction_Type__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Fund Transaction Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Templates</pluralLabel>
    <recordTypes>
        <fullName>UL_Fund_Transaction</fullName>
        <active>true</active>
        <description>Transaction templates for Fund transactions</description>
        <label>Fund Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>UL_Promotion_Transaction</fullName>
        <active>true</active>
        <description>Transaction Template for Promotions</description>
        <label>Promotion Transaction</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_if_template_is_unique</fullName>
        <active>true</active>
        <errorConditionFormula>and( 
Name = VLOOKUP 
($ObjectType.ACCL__Fund_Transaction_Template__c.Fields.Name , $ObjectType.ACCL__Fund_Transaction_Template__c.Fields.Name, Name ), 

not( 
Id=VLOOKUP 
($ObjectType.ACCL__Fund_Transaction_Template__c.Fields.Id , $ObjectType.ACCL__Fund_Transaction_Template__c.Fields.Name, Name )))</errorConditionFormula>
        <errorMessage>Transaction template with same name already exists. Please use another name</errorMessage>
    </validationRules>
</CustomObject>